re PR c++/11595 (crash on duplicate label definition)

PR c++/11595
	* decl.c (define_label): Remove unreachable timevar pop.
	Always return the decl, even if the definition is invalid.

From-SVN: r71138